--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -967,14 +967,11 @@ li:nth-child(2) {
 }
 // footer styles
 .footer {
-  background-color: #292929;
   padding-top: 20px;
-  padding-bottom: 20px;
   margin-top: auto;
 
   @include media-custom(1440px) {
-    padding-top: 78px;
-    padding-bottom: 30px;
+    padding-top: 75px;
   }
 
   @include media-custom(1920px) {
@@ -985,10 +982,35 @@ li:nth-child(2) {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #292929;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+
+    @include media-medium() {
+      padding-top: 26px;
+    }
+
+    @include media-custom(1440px) {
+      padding-top: 78px;
+      padding-bottom: 30px;
+    }
+
+    @include media-custom(1920px) {
+      padding-top: 80px;
+    }
   }
 
   &__menu {
     padding-bottom: 30px;
+
+    @include media-custom(1440px) {
+      padding-bottom: 47px;
+    }
+
+    @include media-custom(1920px) {
+      padding-bottom: 45px;
+    }
 
     &--mobile {
       @include media-medium() {
@@ -1116,6 +1138,10 @@ a:focus {
     gap: 20px;
     margin-bottom: 20px;
 
+    @include media-medium() {
+      margin-bottom: 30px;
+    }
+
     svg,path {
       transition: .3s ease-in-out;
     }
@@ -1142,6 +1168,16 @@ font-size: 12px;
 line-height: 14px;
 color: white;
 text-align: center;
+
+@include media-medium() {
+  font-size: 14px;
+line-height: 16px;
+}
+
+@include media-custom(1440px) {
+  font-size: 16px;
+line-height: 19px;
+}
   }
   &__conditions-price {
     max-width: 320px;
@@ -1162,6 +1198,10 @@ text-align: center;
 font-size: 12px;
 line-height: 14px;
 color: white;
+
+@include media-custom(1440px) {
+  display: none;
+}
 
     a {
       text-decoration: none;
@@ -1185,5 +1225,115 @@ color: white;
       align-items: center;
       gap: 4px;
     }
+  }
+
+  &__mail {
+      max-width: 320px;
+      margin: auto;
+      padding-bottom: 20px;
+
+      @include media-medium() {
+        max-width: 500px;
+      }
+
+      @include media-custom(1440px) {
+        padding-bottom: 75px;
+      }
+
+      @include media-custom(1920px) {
+        padding-bottom: 85px;
+      }
+
+      fieldset {
+        padding: 0;
+        border-color: transparent;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      legend {
+        font-size: 16px;
+        font-weight: 300;
+line-height: 19px;
+padding-bottom: 10px;
+color: white;
+
+@include media-medium() {
+  font-size: 20px;
+line-height: 23px;
+padding-bottom: 11px;
+}
+
+@include media-custom(1440px) {
+  font-size: 24px;
+line-height: 28px;
+padding-bottom: 5px;
+}
+      }
+
+      p {
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 14px;
+        padding-bottom: 10px;
+        color: white;
+
+        @include media-medium() {
+          font-size: 14px;
+          line-height: 16px;
+          padding-bottom: 22px;
+        }
+
+        @include media-custom(1440px) {
+          font-size: 16px;
+line-height: 19px;
+padding-bottom: 16px;
+        }
+      }
+  }
+  &__mail-input-group {
+    max-width: 265px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    align-items: center;
+    gap: 10px;
+
+    @include media-medium() {
+      max-width: 405px;
+    }
+
+    input {
+        padding-bottom: 7px;
+        border-color: transparent;
+        border-bottom: 1px solid white;
+        font-weight: 300;
+font-size: 14px;
+line-height: 16px;
+color: white;
+background-color: transparent;
+
+&:focus,
+&:focus-visible,
+&:focus-within {
+  outline: black;
+}
+
+&::placeholder {
+  color: inherit;
+}
+    }
+  }
+  &__mail-btn {
+    background-color: transparent;
+    border-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
   }
 }
