--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2116,4 +2116,322 @@ line-height: 23px;
         }
     }
 }
+
+.together-with {
+
+    @include media-medium() {
+        margin-bottom: 51px;
+    }
+
+    h2 {
+        max-width: 100%;
+        margin-bottom: 20px;
+        font-weight: 700;
+font-size: 24px;
+line-height: 28px;
+text-transform: uppercase;
+
+@include media-custom(1440px) {
+    font-size: 32px;
+line-height: 38px;
+}
+
+@include media-custom(1920px) {
+    font-size: 36px;
+line-height: 42px;
+}
+
+&::before {
+    max-width: 240px;
+}
+
+&::after {
+    @include media-custom(1920px) {
+        width: 85%;
+    }
+}
+    }
+
+    ul {
+        padding: 0;
+        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 10px;
+        column-gap: 15px;
+
+        @include media-medium() {
+            grid-template-columns: 340px repeat(2,1fr);
+            column-gap: 10px;
+            row-gap: 0;
+        }
+
+        @include media-custom(1440px) {
+            grid-template-columns: 540px repeat(2,280px);
+            column-gap: 30px;
+            row-gap: 40px;
+        }
+
+        @include media-custom(1920px) {
+            justify-content: center;
+            grid-template-columns: 600px repeat(2,340px);
+        }
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__card {
+        position: relative;
+        figcaption {
+             position: absolute;
+             width: 100%;
+        }
+    }
+
+    &__item--big {
+        grid-column: span 2;
+
+        @include media-medium() {
+            grid-column: 1;
+            grid-row: span 2;
+        }
+
+        @include media-custom(1920px) {
+            margin-top: 2rem;
+        }
+    }
+
+    &__item--small {
+        @include media-medium() {
+            height: 180px;
+            position: relative;
+            top: 38px;
+        }
+
+        @include media-custom(1440px) {
+            height: 280px;
+            position: static;
+        }
+
+        @include media-custom(1920px) {
+            height: 340px;
+        }
+    }
+
+    &__card--big {
+       height: 340px;
+
+       @include media-custom(1440px) {
+        height: 520px;
+       }
+
+       @include media-custom(1920px) {
+        height: 600px;
+       }
+        
+       figcaption {
+        bottom: 0;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        padding-left: 8px;
+        padding-right: 8px;
+        background: rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(3px);
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    @include media-custom(1440px) {
+        padding-top: 33px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 40px;
+    }
+
+    @include media-custom(1920px) {
+        padding-top: 30px;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+
+        p {
+            font-weight: 300;
+font-size: 14px;
+line-height: 16px;
+text-transform: uppercase;
+color: white;
+padding-bottom: 19px;
+max-width: 320px;
+
+@include media-custom(1440px) {
+    font-size: 16px;
+line-height: 19px;
+max-width: 480px;
+padding-bottom: 30px;
+}
+
+@include media-custom(1920px) {
+    font-size: 20px;
+line-height: 23px;
+padding-bottom: 31px;
+}
+
+span {
+    font-weight: 400;
+}
+        }
+       }
+
+    }
+
+&__card--small {
+     height: 160px;
+     width: 100%;
+
+     @include media-medium() {
+        height: 100%;
+     }
+
+     figcaption {
+        top: 0;
+        left: 0;
+        height: 100%;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        transition: .3s ease-in-out;
+
+        &:hover {
+            @include media-custom(1440px) {
+                background: rgba(0, 0, 0, 0.5);
+                backdrop-filter: blur(3px);
+            }
+
+            .together-with__card-link--small {
+                display: flex;
+            }
+        }
+
+        @include media-medium() {
+            padding: 5px;
+        }
+        @include media-custom(1440px) {
+            padding: 15px;
+        }
+     }
+
+     h2 {
+        font-weight: 300;
+font-size: 12px;
+line-height: 14px;
+text-transform: uppercase;
+color: white;
+
+@include media-medium() {
+    font-size: 14px;
+line-height: 16px;
+}
+
+@include media-custom(1440px) {
+    font-size: 16px;
+line-height: 19px;
+}
+
+@include media-custom(1920px) {
+    font-size: 20px;
+line-height: 23px;
+}
+     }
+}
+
+    &__card-link {
+        font-weight: 300;
+    }
+
+    &__card-link--big {
+        max-width: 180px;
+        height: 40px;
+        font-size: 14px;
+       line-height: 16px;
+
+       @include media-custom(1440px) {
+        max-width: 220px;
+       }
+
+       @include media-custom(1920px) {
+        max-width: 240px;
+        background-color: black;
+        color: white;
+        font-size: 16px;
+        line-height: 19px;
+        border-color: black;
+       }
+    }
+
+    &__card-link--small {
+        max-width: 120px;
+        height: 30px;
+        font-size: 12px;
+      line-height: 14px;
+      margin: auto;
+
+      @include media-medium() {
+        font-size: 14px;
+        line-height: 16px;
+      }
+
+      @include media-custom(1440px) {
+        display: none;
+        max-width: 180px;
+        background-color: white;
+        font-weight: 700;
+        color: black;
+      }
+    }
+
+    &__card-tags {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        @include media-custom(1440px) {
+            align-items: flex-end;
+        }
+
+        p {
+            font-weight: 700;
+font-size: 12px;
+line-height: 14px;
+color: white;
+
+@include media-medium() {
+    font-size: 14px;
+    line-height: 16px;
+}
+
+@include media-custom(1440px) {
+    font-size: 16px;
+line-height: 19px;
+}
+        }
+
+        a {
+            display: flex;
+            text-decoration: none;
+
+            svg {
+                @include media-custom(1440px) {
+                    width: 30px;
+                    height: 30px;
+                }
+            }
+        }
+    }
+}
 /* index styles - end */
