--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -72,6 +72,11 @@ select {
   --red-color:#FF0000;
 --grey-color:rgba(41, 41, 41, 0.5);
 --pink-color:#E28376;
+--light-grey-color: #D8D8D8;
+--dark-grey-color:#A5A0A0;
+--green-color: #37A64F;
+--light-red-color: #CE4949;
+--yellow-color: #FFE600;
 }
 
 body {
@@ -178,6 +183,12 @@ main {
   color: black;
 }
 
+.variant-1-btn:disabled,
+.variant-1-btn.disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
 .variant-1-btn:hover::after,
 .variant-1-btn:active::after,
 .variant-1-btn:focus::after {
@@ -221,6 +232,12 @@ main {
 .variant-2-btn:active::after,
 .variant-2-btn:focus::after {
   height: 100%;
+}
+
+.variant-2-btn:disabled,
+.variant-2-btn.disabled {
+  pointer-events: none;
+  cursor: not-allowed;
 }
 [x-cloak] { display: none !important; }
 
@@ -364,6 +381,85 @@ line-height: 42px;
     transform: translateY(25px);
   }
 
+}
+.breadcrumbs {
+  padding: 20px 0;
+  display: none;
+
+  @include media-medium() {
+    display: block;
+  }
+
+  @include media-custom(1440px) {
+    padding: 30px 0;
+  }
+
+  &__container {
+
+    @include media-custom-max(1439px) {
+      --padding-left: 20px;
+      --padding-right: 20px;
+    }
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    font-weight: 300;
+font-size: 12px;
+line-height: 14px;
+color: white;
+text-transform: uppercase;
+  }
+  li {
+    display: flex;
+    align-items: center;
+  }
+  li:not(:last-child) {
+    padding-right: 10px;
+  }
+  li.active a {
+    font-weight: 500;
+  }
+  li.active a::after {
+    content: '';
+    font-weight: 500;
+    height: 1px;
+    width: 100%;
+    background-color: white;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin-top: 1px;
+  }
+  li:not(:last-child)::after {
+     content: '/';
+     width: 5px;
+     height: 14px;
+     margin-left: 10px;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
+    position: relative;
+  }
+
+  &__previous-page-link {
+    display: flex;
+    align-items: center;
+    margin-right: 4px;
+
+    &::after {
+      content: '|';
+      margin-left: 4px;
+      height: 100%;
+      width: 1px;
+      background-color: white;
+    }
+  }
 }
 // header styles
 .header {
