--- a/src/styles/pages/product-card.scss
+++ b/src/styles/pages/product-card.scss
@@ -825,6 +825,10 @@ line-height: 23px;
         }
     }
 }
+.fancybox__backdrop {
+    --fancybox-bg: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(3px);
+}
 .fancybox__toolbar,
 .fancybox__slide::before, .fancybox__slide::after,
 .fancybox__thumbs {
@@ -838,5 +842,172 @@ line-height: 23px;
     @include media-custom(1440px) {
         padding: 0;
         align-self: center;
+    }
+}
+.table-modal {
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(3px);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -999;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s ease-in-out;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        z-index: 999;
+    }
+
+    &__content {
+        background-color: white;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+    padding: 30px 20px;
+    width: 100%;
+
+    @include media-custom(376px) {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    @include media-medium() {
+        padding-bottom: 40px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    @include media-custom(1440px) {
+        max-width: toRem(920);
+    }
+    }
+
+    .simplebar-track.simplebar-horizontal .simplebar-scrollbar {
+        height: 5px;
+        top: 0;
+    }
+    .simplebar-scrollbar:before {
+        background-color: black;
+        opacity: 1;
+    }
+    .simplebar-track {
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 7px;
+        height: 5px;
+        margin-left: 10px;
+        margin-right: 10px;
+
+        @include media-medium() {
+            margin-left: 0;
+            margin-right: 0;
+        }
+    }
+
+    &__top {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding-bottom: 12px;
+
+        @include media-medium() {
+            padding-bottom: 20px;
+        }
+    }
+    &__title {
+        display: grid;
+        grid-auto-flow: column;
+        gap: 15px;
+        align-items: flex-end;
+    }
+    &__close {
+        margin: 0;
+        padding: 0;
+        background-color: transparent;
+        border-color: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    h2 {
+        font-weight: 300;
+font-size: 20px;
+line-height: 23px;
+color: black;
+
+@include media-medium() {
+    font-size: 32px;
+line-height: 38px;
+}
+    }
+    span {
+        font-weight: 300;
+font-size: 14px;
+line-height: 16px;
+color: black;
+
+@include media-medium() {
+    margin-bottom: 5px;
+}
+    }
+    h3 {
+        font-weight: 300;
+font-size: 14px;
+line-height: 16px;
+color: black;
+padding-bottom: 20px;
+
+@include media-medium() {
+    font-size: 20px;
+line-height: 23px;
+padding-bottom: 19px;
+}
+    }
+    &__table-wrapper {
+        overflow-x: auto;
+        padding-bottom: 29px;
+    }
+    table {
+        font-weight: 300;
+font-size: 14px;
+line-height: 16px;
+color: black;
+border-collapse: collapse;
+
+@include media-medium() {
+    font-size: 16px;
+line-height: 19px;
+}
+    }
+    table td {
+        border: 1px solid rgba(0, 0, 0, 0.5);
+        border-left: none;
+        text-align: center;
+        padding: 15px;
+        white-space: nowrap;
+
+        @include media-medium() {
+            padding: 21px;
+        }
+    }
+    table tr td:first-child {
+       padding-left: 0;
+       text-align: left;
+
+       @include media-medium() {
+        padding-left: 10px;
+       }
     }
 }
