--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -479,13 +479,13 @@ text-transform: uppercase;
   &__previous-page-link {
     display: flex;
     align-items: center;
-    margin-right: 4px;
+    margin-right: 7px;
 
     &::after {
       content: '|';
-      margin-left: 4px;
+      margin-left: 5px;
       height: 100%;
-      width: 1px;
+      width: 0;
       background-color: white;
     }
   }
