--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -589,6 +589,9 @@ line-height: 42px;
 
         sup {
           color: var(--pink-color);
+          position: relative;
+    top: 6px;
+    font-size: 16px;
         }
       }
       input {
