--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -78,6 +78,7 @@ select {
 --light-grey-color: #D8D8D8;
 --dark-grey-color:#A5A0A0;
 --green-color: #37A64F;
+--green-color-2: #05FF00;
 --light-red-color: #CE4949;
 --yellow-color: #FFE600;
 --olive-color:#9B902B;
@@ -560,8 +561,8 @@ line-height: 42px;
       justify-content: center;
       background-color: transparent;
       border-color: transparent;
-      width: 20px;
-      height: 20px;
+      width: 30px;
+      height: 30px;
       margin-top: -5px;
 
       svg {
@@ -646,6 +647,27 @@ margin: 0;
   @include media-custom(1440px) {
       margin-top: auto;
   }
+}
+.input-validation {
+  position: relative;
+}
+.input-validation--correct::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: var(--green-color-2);
+}
+.input-validation--error::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: var(--red-color);
 }
 // header styles
 .header {
