--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -269,6 +269,53 @@ main {
   pointer-events: none;
   cursor: not-allowed;
 }
+
+.variant-3-btn {
+  border: 1px solid black;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  width: 100%;
+  transition: .3s ease-in-out;
+  color: white;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+ }
+
+ .variant-3-btn::after {
+  content: '';
+	position: absolute;
+	z-index: -1;
+  width: 100%;
+	height: 0;
+	top: 0;
+	left: 0;
+	background-color: white;
+  transition: all 0.4s;
+}
+.variant-3-btn:hover,
+.variant-3-btn:active,
+.variant-3-btn:focus {
+  color: black;
+}
+
+.variant-3-btn:hover::after,
+.variant-3-btn:active::after,
+.variant-3-btn:focus::after {
+  height: 100%;
+}
+
+.variant-3-btn:disabled,
+.variant-3-btn.disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
 [x-cloak] { display: none !important; }
 
 .section-title {
