--- a/src/styles/pages/order-making.scss
+++ b/src/styles/pages/order-making.scss
@@ -116,10 +116,18 @@ z-index: 0;
         left: 0;
         margin-left: 2rem;
         transform: rotate(180deg);
+
+        @include media-medium() {
+            margin-left: 1rem;
+        }
     }
     &__to-next-step-btn svg {
         right: 0;
         margin-right: 2rem;
+
+        @include media-medium() {
+            margin-right: 1rem;
+        }
     }
 
     &__return-back-btn:hover,
@@ -145,12 +153,7 @@ z-index: 0;
         opacity: 1;
     }
 
-    &__return-back-btn {
-        @include media-medium() {
-            min-width: 167px;
-        }
-    }
-
+    &__return-back-btn,
     &__to-next-step-btn {
         @include media-medium() {
             min-width: 260px;
@@ -645,8 +648,7 @@ line-height: 38px;
 
     &__city-search {
         width: 100%;
-        max-width: 160px;
-        position: relative;
+        min-width: 160px;
         margin-bottom: 11px;
         position: relative;
 
@@ -654,6 +656,7 @@ line-height: 38px;
             margin-right: 5px;
             margin-bottom: 0;
             margin-top: 10px;
+            min-width: 180px;
         }
 
         input {
@@ -687,6 +690,7 @@ line-height: 23px;
 
     &__city-search-list {
         padding: 0;
+        padding-top: 20px;
         margin: 0;
         width: 100%;
         display: grid;
@@ -694,12 +698,18 @@ line-height: 23px;
         font-weight: 300;
 font-size: 12px;
 line-height: 14px;
-max-height: 225px;
+max-height: 393px;
 margin-top: 5px;
+overflow-y: auto;
+position: absolute;
+z-index: 9;
+top: 30px;
+background-color: white;
+box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 
 @include media-custom(1440px) {
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 14px;
+    line-height: 16px;
 }
 
 &__city-search-list::-webkit-scrollbar {
@@ -729,16 +739,35 @@ margin-top: 5px;
         }
     }
 
+    &__city-search-list-item {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 2rem;
+    }
+
+    &__city-search-list-item:hover,
+    &__city-search-list-item:active,
+    &__city-search-list-item.active,
+    &__city-search-list-item:focus {
+        background: rgba(0, 0, 0, 0.05);
+    }
+
+    &__city-search-list-title {
+        padding-left: 1rem;
+    }
+
     &__delivery-point-search {
         width: 100%;
         position: relative;
         margin-bottom: 11px;
         position: relative;
+        min-width: 160px;
 
         @include media-custom(1440px) {
             margin-bottom: 0;
             margin-right: 15px;
             margin-top: 10px;
+            min-width: 180px;
         }
 
         input {
@@ -772,6 +801,7 @@ line-height: 23px;
 
     &__delivery-point-search-list {
         padding: 0;
+        padding-top: 20px;
         margin: 0;
         margin-top: 5px;
         width: 100%;
@@ -780,11 +810,18 @@ line-height: 23px;
         font-weight: 300;
 font-size: 12px;
 line-height: 14px;
-max-height: 225px;
+max-height: 393px;
+margin-top: 5px;
+overflow-y: auto;
+position: absolute;
+z-index: 9;
+top: 30px;
+background-color: white;
+box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 
 @include media-custom(1440px) {
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 14px;
+    line-height: 16px;
 }
 
 &.active {
@@ -808,6 +845,23 @@ max-height: 225px;
     width: 3px;
     border-radius: 7px;
 }
+    }
+
+    &__delivery-point-search-list-item {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 2rem;
+    }
+
+    &__delivery-point-search-list-item:hover,
+    &__delivery-point-search-list-item:active,
+    &__delivery-point-search-list-item.active,
+    &__delivery-point-search-list-item:focus {
+        background: rgba(0, 0, 0, 0.05);
+    }
+
+    &__delivery-point-search-list-title {
+        padding-left: 1rem;
     }
 }
 
